# sysmon

./: .gitignore  AUTO_RELEASE_GUIDE.md  BUILD.bat  CHANGELOG.md  COMPLETE_INSTALLATION.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX.md  DIRECT_EXE_DOWNLOAD_GUIDE.md  FEATURE_SHOWCASE.md  GITHUB_PAGES_AUTO_DEPLOY.md  GITHUB_PAGES_DEPLOYMENT.md  GITHUB_RELEASE_v1.2.0.md  GUI_FEATURES.md  INSTALL.bat  INSTALLATION_GUIDE.md  INSTRUCTIONS.md  NEW_FEATURES.md  QUICK_START.md  README.md  README_UPDATES.md  RELEASE_NOTES.md  SETUP_GUIDE.md  START_HERE.md  SystemMonitor.ps1  TESTING_RESULTS.md  TEST_GUIDE.md  USER_GUIDE.md  VERSION_1.1.0_FEATURES.md  VERSION_1.2.0_FEATURES.md  VERSION_1.3.0_FEATURES.md  VERSION_1.4.0_FEATURES.md  WHATS_NEW.md  build.ps1  build.rs  build_log.txt  create-installer.ps1  dbg.txt  (+19 more)
.cargo/: config.toml
.github/workflows/: pages-deploy.yml  release-build.yml  windows-release.yml
docs/: _config.yml  index.html  script.js  styles.css
docs/downloads/: .gitkeep
downloads/: .gitkeep
plans/: website-redesign-plan.md
src/: main.rs  privilege.rs  startup.rs  updater.rs
