[package]
name = "system-monitor"
version = "2.2.0"
edition = "2021"
authors = ["System Monitor Contributors"]
description = "A professional system monitoring application for Windows with GUI"
license = "MIT"
repository = "https://github.com/yourusername/system-monitor"

[[bin]]
name = "system-monitor"
path = "src/main.rs"

[dependencies]
sysinfo = "0.30"
nvml-wrapper = "0.10"
chrono = "0.4"
eframe = "0.28"
egui = "0.28"
egui_plot = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.10"
directories = "5.0"
rfd = "0.14"
csv = "1.3"
image = { version = "0.25.9", features = ["png"] }
egui_extras = { version = "0.28.1", features = ["image"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tray-icon = "0.21.3"
muda = "0.17.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Threading", 
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
] }
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[build-dependencies]
image = { version = "0.25.9", features = ["bmp", "ico", "png"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
